Refresh rate control for queries.

--- a/PluginWMI/Example/wmi.ini
+++ b/PluginWMI/Example/wmi.ini
@@ -1,57 +1,55 @@
 ;
 ; A few examples on how to use WMIPlugin for Rainmeter.
-;
-; Note that most of these values change very unfrequently, and also,
-; WMI query is rather slow operation. So keep updates at as slow ratio as possible
-; (by setting UpdateDivider). Twice a minute is reasonable (1000 in raimneter and 
-; 30 in UpdateDivider). Be careful, because some WMI queries can take VERY long!
-
+; -----------------------------------------------------
 ; The general query format is: 
 ; SELECT property FROM class WHERE someProperty='x'
-; Some SQL rules apply. See WML documentation for details.
+; See WML documentation for details.
 ; Only one 'property' in SELECT is supported (if you select more, only the first one
 ; is returned).
+;
+; Refresh setting controls how often query is performed (e.g. 30 means every 30 seconds).
+; 
 
 ; Gets the status of Windows Search Service
 [MeasureServiceStatus]
 Measure=Plugin
 Plugin=WMI
-UpdateDivider=30
-Query=SELECT Status FROM Win32_Service WHERE Caption='Windows Search'
+Refresh=3600
+Query=SELECT State FROM Win32_Service WHERE Caption='Windows Search'
 
 ; Gets the name of the operating system
 [MeasureOSName]
 Measure=Plugin
 Plugin=WMI
-UpdateDivider=300000
+Refresh=3600
 Query=SELECT Caption FROM Win32_OperatingSystem
 
 ; Gets the name of video adapter installed
 [MeasureVideo]
 Measure=Plugin
 Plugin=WMI
-UpdateDivider=300000
+Refresh=3600
 Query=SELECT Caption FROM Win32_VideoController
 
 ; Boot volume
 [MeasureBootVolume]
 Measure=Plugin
 Plugin=WMI
-UpdateDivider=300000
+Refresh=3600
 Query=SELECT Caption FROM Win32_Volume WHERE BootVolume=True
 
 ; Page file
 [MeasurePageFile]
 Measure=Plugin
 Plugin=PluginWMI
-UpdateDivider=300000
-Query=SELECT Caption FROM Win32_PageFileUsage
+Refresh=60
+Query=SELECT CurrentUsage FROM Win32_PageFileUsage
 
 ; Established TCP4 connections
 [MeasureTCPConnections]
 Measure=Plugin
 Plugin=PluginWMI
-UpdateDivider=60
+Refresh=60
 Query=SELECT ConnectionsEstablished FROM Win32_PerfRawData_Tcpip_TCPv4
 
 [TextHeader]
@@ -97,16 +95,16 @@ SolidColor=100,100,90,150
 FontColor=FFFFFF
 Text="Video: %1"
 
-[TextBootVolume]
+[TextPageFile]
 Meter=STRING
-MeasureName=MeasureBootVolume
+MeasureName=MeasurePageFile
 X=5
 Y=85
 W=300
 H=20
 SolidColor=100,100,90,150
 FontColor=FFFFFF
-Text="Boot from: %1"
+Text=Page file usage: %1 MB
 
 [TextMisc]
 Meter=STRING
@@ -117,4 +115,4 @@ W=300
 H=20
 SolidColor=100,100,90,150
 FontColor=FFFFFF
-Text="TCP4 est. conns: %1"
+Text="TCP4 est. connections: %1"
